objects/Lead.object
<CustomObject>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store type of Opportunity.</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Solutions Fast-Track</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This custom field accesses the Opportunity details of a Lead.</description>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnedByPRMContact__c</fullName>
        <description>APR 14: Checkbox field to determine if the lead is owned by a PRM contact who has access to bFO</description>
        <formula>Owner:User.Contact.PRMUser__c</formula>
        <label>Owned By PRM Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POBoxZipCode__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store PO Box Zip Code.</description>
        <label>PO Box Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POBox__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store the PO Box.</description>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Chat_ID__c</fullName>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Mail_ID__c</fullName>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This custom field stores the Parent Lead.</description>
        <label>Parent Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Child Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerLeadStatus__c</fullName>
        <inlineHelpText>“Submitted – work” means conversion to an opportunity that needs further involvement of Schneider Electric.
“Submitted – Won” is for transactions which already took place and do not require further Schneider Electric involvement</inlineHelpText>
        <label>Partner Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Submitted - Work</fullName>
                </value>
                <value>
                    <fullName>Submitted - Won</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerLostReason__c</fullName>
        <description>PRM 14 : Lost reason for partner users</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PartnerLeadStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Data</fullName>
                </value>
                <value>
                    <fullName>Call Attempt Limit Met</fullName>
                </value>
                <value>
                    <fullName>Currently woking with SE Partner</fullName>
                </value>
                <value>
                    <fullName>Currently working with SE Rep</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No action taken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>APR 14: Field to determine the partner program that is associated with the lead for partner worked leads</description>
        <label>Partner Program</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Choose a valid partner program.</errorMessage>
            <filterItems>
                <field>PartnerProgram__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterPartnerProgram</value>
            </filterItems>
            <filterItems>
                <field>PartnerProgram__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CountryPartnerProgram</value>
            </filterItems>
            <filterItems>
                <field>PartnerProgram__c.ProgramStatus__c</field>
                <operation>notEqual</operation>
                <value>Draft, Pending Approval, Rejected</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PowerGridDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related field</description>
        <label>Power &amp; Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <description>July 2014 Preferred Language for Marketo</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>SQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>ZH</fullName>
                </value>
                <value>
                    <fullName>ZF</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Coverage_Model__c</fullName>
        <formula>TEXT(Account__r.PrimaryRelationshipLeader__c)</formula>
        <label>Primary Coverage Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName =&apos;Lead&apos;, 10, 1)</defaultValue>
        <description>SEPTEMBER RELEASE - This custom fields stores the priority of the Lead.</description>
        <inlineHelpText>The priority of the Lead; 1 being the highest</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessMachinesDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related fields</description>
        <label>Process &amp; Machines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedBySDH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created to support the lead integration between SDH and bFO. Field populated by SDH.</description>
        <label>Processed By SDH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductFocus__c</fullName>
        <formula>NonMarcommCampaign__r.ProductFocus__c</formula>
        <label>Product Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductMarketed__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Product Marketed for the Lead.</description>
        <inlineHelpText>The SE Product that was marketed in the activity</inlineHelpText>
        <label>Product Marketed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>APR 14: Level associated with chosen partner program</description>
        <label>Program Level</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Choose a valid program level</errorMessage>
            <filterItems>
                <field>ProgramLevel__c.LevelStatus__c</field>
                <operation>equals</operation>
                <value>Active, Inactive</value>
            </filterItems>
            <filterItems>
                <field>ProgramLevel__c.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>$Source.PartnerProgram__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromoID__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Promo ID of the Lead.</description>
        <label>Promo ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoSource__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Source of the Lead response.</description>
        <inlineHelpText>For responses entered by the contact online, this is the site that they went to; SEREPLY.COM or APC.COM</inlineHelpText>
        <label>Promo Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoTitle__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Title of the Leads response.</description>
        <inlineHelpText>Represents the element of the Creative Asset that drives the contact to respond in order to capture their contact details.</inlineHelpText>
        <label>Promo Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasedDate__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the date of product purchased by a Lead.</description>
        <inlineHelpText>The approximate date the purchase was made</inlineHelpText>
        <label>Purchased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchasedFrom__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the &apos;from&apos; data of product purchased by a lead.</description>
        <inlineHelpText>From Whom; if the Lead has indicated that they have already purchased something</inlineHelpText>
        <label>Purchased From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasedProduct__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the data of products purchased.</description>
        <inlineHelpText>What product was purchased</inlineHelpText>
        <label>Purchased Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualificationInfo__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the Leads qualification details.</description>
        <inlineHelpText>Please capture the lead responses from the script here.</inlineHelpText>
        <label>Qualification Info</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RM_LeadID__c</fullName>
        <description>This field holds the unique ID of the lead in response management. This field is populated from the value of the ID$ column in the bFO extract file that is generated from Response Management.</description>
        <label>RM_LeadID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready2Convert__c</fullName>
        <description>Ready to convert</description>
        <formula>IF(
	OR(
		ISPICKVAL(PreferredLanguage__c, &quot;&quot;),(AccountContactShouldBe__c = true),
		IF(OpportunityDoesNotExist__c,false,OR(ISBLANK( TEXT(LeadingBusiness__c)), ISBLANK( TEXT(OpportunityType__c)), ISBLANK( TEXT(OpportunityScope__c)), ISBLANK( SuspectedValue__c ), ISBLANK( OpportunityFinder__c))),
		AND(
			ISBLANK(Account__c),
			OR(
				ISBLANK( City__c ),
				ISBLANK( TEXT(ClassificationLevel1__c) ),
				AND(ISBLANK( Street__c ), ISBLANK(POBox__c)),ReadyToConvertExtn__c = &apos;Y&apos;

			)
		),
		CONTAINS(TEXT(Status),&quot;3 - Closed - &quot;)
	),
	IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;KO&quot;, 16,16) &amp; BR() &amp;
	if( 
		CONTAINS(TEXT(Status),&quot;3 - Closed - &quot;),
		&apos; &apos;,
		&quot; Remaining fields for conversion :&quot; &amp; BR() &amp; 
		IF(ISPICKVAL(PreferredLanguage__c, &quot;&quot;), &quot;Preferred Language&quot;, &quot;&quot;)&amp;
		IF(OpportunityDoesNotExist__c,&quot;&quot;,
			IF ( ISBLANK( TEXT(LeadingBusiness__c)), &quot;, Leading Business&quot;, &quot;&quot;) &amp;
			IF ( ISBLANK( TEXT(OpportunityType__c)), &quot;, Opportunity Type&quot;, &quot;&quot;) &amp; 
			IF ( ISBLANK( TEXT(OpportunityScope__c)),&quot;, Opportunity Line Scope&quot;, &quot;&quot;) &amp; 
			IF (ISBLANK( SuspectedValue__c ),&quot;, Suspected Value&quot;, &quot;&quot;) &amp; 
			IF ( ISBLANK( OpportunityFinder__c), &quot;, Opportunity Finder&quot;, &quot;&quot;) 
		)&amp;
			IF( ISBLANK(Account__c),
			IF( ISBLANK( City__c ), &quot;, City&quot;, &quot;&quot;) &amp;
			IF( AND(ISBLANK( Street__c ), ISBLANK( POBox__c )) , &quot;, Street OR POBox&quot;, &quot;&quot;) &amp;
			IF( AND(NOT(ISBLANK(Company)), ISBLANK( TEXT(ClassificationLevel1__c))), &quot;, Classification Level 1&quot;, &quot;&quot;) &amp;
			IF( AND( TEXT(ClassificationLevel1__c) = &quot;EU&quot;, ISBLANK( TEXT(MarketSegment__c) ), RecordTypeId = &apos;012A0000000oBmL&apos;, OpportunityDoesNotExist__c ), &quot;, Market Segment&quot;, &quot;&quot;)
		, &quot;&quot;)&amp;IF((AccountContactShouldBe__c = true), &quot; ,Account is inconsistent&quot;, &quot;&quot;)
	)
	, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;OK&quot;, 16,16)
)</formula>
        <inlineHelpText>Required for conversion : Leading BU, Opportunity Type/Line Scope, Suspected Value, Opportunity Finder 
If no defined account: City, (Street or POBox), Classification Lvl1;
Zipcode &amp; State/Province might be required depending on Country</inlineHelpText>
        <label>Ready to Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyToConvertExtn__c</fullName>
        <defaultValue>&apos;N&apos;</defaultValue>
        <description>Since Ready2Convert field formula exceeded the character limit, a part of condition is checked separately.</description>
        <label>ReadyToConvertExtn</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecycleReason__c</fullName>
        <description>Mar&apos;16 Release - Reason code capture when the lead status is changed to Recycled</description>
        <label>Recycle Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>RR001</fullName>
                </value>
                <value>
                    <fullName>RR002</fullName>
                </value>
                <value>
                    <fullName>RR003</fullName>
                </value>
                <value>
                    <fullName>RR004</fullName>
                </value>
                <value>
                    <fullName>RR005</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelativeScore__c</fullName>
        <description>June Release: Marketo Relative Score for bMA Lead and bMA Transactional Lead</description>
        <formula>IF(RecordType.DeveloperName = &quot;Lead&quot;,  mkto_si__Relative_Score__c ,IF(AND(RecordType.DeveloperName = &quot;NonMarcomLead&quot;, TransactionalLead__c = True),   Contact__r.mkto_si__Relative_Score__c,&apos;&apos;))</formula>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseCreatedBy__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the owner of response created.</description>
        <inlineHelpText>The person who entered the original response.  This will be Web User if entered by the contact, otherwise this will be the name of the internal employee who entered the response through Manual Capture or File Upload</inlineHelpText>
        <label>Response Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the date when the response from the lead was captured.</description>
        <inlineHelpText>The date the response was captured (entered online, attended the event, etc)</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResponseID__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the ID of the response created.</description>
        <label>Response ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHExternalID__c</fullName>
        <description>External ID for SDH (Leads coming from Response Management)</description>
        <externalId>true</externalId>
        <label>SDHExternalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDHGoldenVersion__c</fullName>
        <description>Field created to support the lead integration between SDH and bFO. Field populated by SDH</description>
        <label>SDHGoldenVersion</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEPartner__c</fullName>
        <description>SEPTEMBER RELEASE - This field stores the SE Partner name who is working with the opportunity.</description>
        <inlineHelpText>The Internal SE Partner&apos;s Name if the Lead indicates they are already working with someone and an Opportunity can not be found</inlineHelpText>
        <label>SE Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERep__c</fullName>
        <description>SEPTEMBER RELEASE - This field stores the SE Representative name who is working with the opportunity.</description>
        <inlineHelpText>The Internal SE Representative&apos;s Name if the Lead indicates they are already working with someone and an Opporutnity can not be found</inlineHelpText>
        <label>SE Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales360Link__c</fullName>
        <formula>IF(ISBLANK(Account__c), &apos;&apos;, (HYPERLINK(&apos;/apex/VFP_InsideSales?accountId=&apos;+Account__r.Id, &quot;Sales Account Summary&quot;,&quot;_target&quot;)))</formula>
        <label>&lt;Sales360Link&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesInsight__c</fullName>
        <description>Mar16 Release: Sales Insight redirecting to the respective lead or contact based on lead type.</description>
        <formula>IF (TransactionalLead__c = FALSE,(HYPERLINK(&quot;/apex/mkto_si__Lead?id=&quot; &amp; Id, IMAGE(&quot;/resource/1459046115000/MKTOSalesInsightLogo&quot;, &quot;Sales Insight&quot; ), &quot;_blank&quot;)),(HYPERLINK(&quot;/apex/mkto_si__Contact?id=&quot; &amp;Contact__c, IMAGE(&quot;/resource/1459046115000/MKTOSalesInsightLogo&quot;, &quot;Sales Insight&quot; ), &quot;_blank&quot;)))</formula>
        <inlineHelpText>This is where you can see customer interactions with SE Website and Marketing activities</inlineHelpText>
        <label>View Customer Behavior</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledCallbackDate__c</fullName>
        <description>SEPTEMBER RELEASE - This Custom field captures the date of Callback Scheduled .</description>
        <label>Scheduled Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SecurityDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related field</description>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SolutionInterest__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store the Solution interest information of a Lead.</description>
        <label>Solution Interest</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceDetail__c</fullName>
        <description>July 2014 Source Detail for Marketo</description>
        <label>Last Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialHandlingInstructions__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store the Special Handling Instructions for Lead.</description>
        <label>Special Handling Instructions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - Custom field to store State/Province based on a reference table and linked to selected Country</description>
        <label>State/Province</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>StateProvince__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>SEPTEMBER RELEASE - Custom field to store street address information of the Lead.</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubStatus__c</fullName>
        <description>SEPTEMBER RELEASE - Sub Status for the field Status.</description>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Data</fullName>
                </value>
                <value>
                    <fullName>Call Attempted</fullName>
                </value>
                <value>
                    <fullName>Call Attempt Limit Met</fullName>
                </value>
                <value>
                    <fullName>Callback Requested</fullName>
                </value>
                <value>
                    <fullName>Currently working with SE Partner</fullName>
                </value>
                <value>
                    <fullName>Currently working with SE Rep</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified &amp; Sold</fullName>
                </value>
                <value>
                    <fullName>Refused By Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>No Action Taken</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working Call Attempted</fullName>
                </value>
                <value>
                    <fullName>Working Callback Scheduled</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Contact Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubscriptionChangeDate__c</fullName>
        <description>Subscription Change Date for Marketo Leads - Mar16 Release</description>
        <label>Subscription Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SuspectedSolution__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Suspected Solution for the Lead.</description>
        <label>Suspected Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SuspectedValue__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Suspected Value for the Lead.</description>
        <inlineHelpText>Value of the Opportunity based on the suspected solution</inlineHelpText>
        <label>Suspected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SynchronizeWithMarketo__c</fullName>
        <defaultValue>IF($RecordType.DeveloperName =&apos;Lead&apos;, 1, 0)</defaultValue>
        <description>July 2014 SynchronizeWithMarketo for Marketo</description>
        <label>Synchronize With Marketo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_CampaignName__c</fullName>
        <description>If the Lead is Non Marcomm lead- This field shows the Campaign name from the Non Marcomm Campaign
If Lead is Marcomm campaign, this field shows the Marcomm Campaign name from the Campaign name field on the lead</description>
        <formula>IF( ISBLANK( NonMarcommCampaign__c ) , CampaignName__c ,  NonMarcommCampaign__r.Name )</formula>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CheckAccountConsistency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BR-1774: To Show warning message when account details on lead are modified</description>
        <label>TECH_CheckAccountConsistency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_CheckConsistency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is populated by the WF rule LED_WF_SEP12MKT01_ContactDetailsModified</description>
        <label>TECH_CheckConsistency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_ClosedDate__c</fullName>
        <formula>IF(NOT(ISNULL(ClosedDate__c)), ClosedDate__c,LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_ClosedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This Custom field stores the Lead&apos;s Country. This field is used in Lead mapping.</description>
        <label>TECH_Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads (TECH_Country)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SEPTEMBER RELEASE - This checkbox ensures whether the Opportunity is created from Lead or not.</description>
        <label>TECH_Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_DaysSinceLastCallAttempted__c</fullName>
        <description>November release 2012. This field is needed for the contact centric view report. Calculate Elapsed days since the last call</description>
        <formula>TODAY()- LastCallAttemptDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_DaysSinceLastCallAttempted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_First_Qualified_Date__c</fullName>
        <description>MKT March 2018 : To store the date at which a member of a certain Marketo campaign is pushed to bFO</description>
        <label>First Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_IncludedInForecast__c</fullName>
        <formula>&quot;Yes&quot;</formula>
        <label>TECH_Included In Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_IsActivityAsc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SEPTEMBER RELEASE - This field is checked, if there are any any activities created for a lead. This field is updated from workflow rule.</description>
        <label>TECH_IsActivityAsc</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>